feat: add post activity endpoint
